calc three spheres but there is a problem with specjal top

--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -137,14 +137,14 @@ block content
       p(class="tariff-wrapper-title") Klient ma cenę:
       .have-prices-divs-wrapper  
         div
-          label(for="havePriceFirst") I strefa: 
-          input(id="havePriceFirst" class="set-to-zero" type="text" value=0)
+          label(for="havePriceFirstThree") I strefa: 
+          input(id="havePriceFirstThree" class="set-to-zero" type="text" value=0)
         div
-          label(for="havePriceSecond") II strefa: 
-          input(id="havePriceSecond" class="set-to-zero" type="text" value=0)
+          label(for="havePriceSecondThree") II strefa: 
+          input(id="havePriceSecondThree" class="set-to-zero" type="text" value=0)
         div
-          label(for="havePriceThird") III strefa: 
-          input(id="havePriceThird" class="set-to-zero" type="text" value=0)
+          label(for="havePriceThirdThree") III strefa: 
+          input(id="havePriceThirdThree" class="set-to-zero" type="text" value=0)
     div(class="intakec23b23")
       p(class="tariff-wrapper-title") Zużycie:
       .intake-divs-wrapper   
@@ -158,8 +158,8 @@ block content
           label(for="wearThirdThreeSpheres") III strefa: 
           input(id="wearThirdThreeSpheres" class="note-remover set-to-zero" type="text" placeholder="np. 20.5" value=0)
         div
-          label(for="wearSum") Suma: 
-          input(id="wearSum" class="note-remover set-to-zero" type="text" placeholder="wyliczę")      
+          label(for="wearSumThreeSpheres") Suma: 
+          input(id="wearSumThreeSpheres" class="note-remover set-to-zero" type="text" placeholder="wyliczę")      
     div(class="propositionc11c21")
       label(for="proposePrice") Twoja propozycja: 
       input(id="proposePrice" class="note-remover" type="text" placeholder="380" value=0)
@@ -177,16 +177,13 @@ block content
       .wrapPropositionsC23B23
         div
           label(for="proposePriceFirstThreeSpheres") I strefa
-          input(type="text" class="note-remover set-to-zero" id="proposePriceFirst" value=0)
+          input(type="text" class="note-remover set-to-zero" id="proposePriceFirstThreeSpheres" value=0)
         div
           label(for="proposePriceSecondThreeSpheres") II strefa
-          input(type="text" class="note-remover set-to-zero" id="proposePriceSecond" value=0)
+          input(type="text" class="note-remover set-to-zero" id="proposePriceSecondThreeSpheres" value=0)
         div
           label(for="proposePriceThirdThreeSpheres") III strefa
-          input(type="text" class="note-remover set-to-zero" id="proposePriceThird" value=0)
-      .wrap-checkbox
-        label(for="onePriceForAll" class="label-for-one-price") Na płasko
-        input(type="checkbox" id="onePriceForAll")
+          input(type="text" class="note-remover set-to-zero" id="proposePriceThirdThreeSpheres" value=0)      
         .wrap-new-calc
         button(class="btn btn-danger" id="clearInputsBtn") Nowe wyliczenie 
     div(class="btn-wrapper")  
