--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -423,3 +423,69 @@
     display: flex;
     justify-content: center;
 }
+
+.reduce-mass-warning {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: antiquewhite;
+    padding: 10px;
+    border: 1px solid brown;
+    display: none;
+    flex-direction: column;
+
+    button {
+        cursor: pointer;
+    }
+}
+
+.btn-reduce-mass {
+    display: none;
+    margin-top: 10px;
+}
+
+.reduce-mass {
+    width: 450px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: antiquewhite;
+    padding: 10px;
+    border: 1px solid brown;
+    display: none;
+    flex-direction: column;
+
+    &__close {
+        position: absolute;
+        right: 1px;
+        top: 1px;
+        width: 32px;
+        height: 32px;
+        cursor: pointer;
+
+        &:hover {
+            color: red;
+        }
+
+        &:before,
+        &:after {
+            position: absolute;
+            left: 15px;
+            content: ' ';
+            height: 33px;
+            width: 2px;
+            background-color: rgb(238, 55, 55);
+        }
+
+        &:before {
+            transform: rotate(45deg);
+        }
+
+        &:after {
+            transform: rotate(-45deg);
+        }
+
+    }
+}
