--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -6,8 +6,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 5.1.0       
-    p(class="alert alert-success wrapper__title") Dodany rok 2024 oraz 2025. 
+    h3 Ofertomat v. 6.0.0       
+    p(class="alert alert-success wrapper__title") Dodane lata 2024,2025, 2026. Dodane 4 produkty. Dodane GT 3 strefowe. Dodane wyliczanie wpływu obniżania OH na MM. Do boju! 
     include parts/knowHow
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
