db rebuild for www, backend also

--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -141,6 +141,9 @@ block content
              label(for="email") Email
              input(class='particular-client__par particular-client__email' name='email')
            .particular-client__div
+             label(for="www") WWW
+             input(class='particular-client__par particular-www' name='www')
+           .particular-client__div
              label(for="consumption") Zużycie
              input(class='particular-client__par particular-client__consumption' name='consumption')
          .particular-client__line-adress
