--- a/views/parts/crmAddClient.pug
+++ b/views/parts/crmAddClient.pug
@@ -44,6 +44,9 @@ form(action="/panel/add-client/" method='POST' class='particular-client-new')
         label(for="email") Email
         input(class='particular-client-new__par particular-client-new__email' name='email')
       .particular-client__div
+        label(for="www") WWW
+        input(class='particular-client-new__par particular-client-www' name='www')
+      .particular-client__div
         label(for="consumption") Zużycie MWh
         input(class='particular-client-new__par particular-client-new__consumption' name='consumption')
     .particular-client__line-adress
