--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -142,7 +142,7 @@ block content
              input(class='particular-client__par particular-client__email' name='email')
            .particular-client__div
              label(for="www") WWW
-             input(class='particular-client__par particular-www' name='www')
+             input(class='particular-client__par particular-client__www' name='www')
            .particular-client__div
              label(for="consumption") Zużycie
              input(class='particular-client__par particular-client__consumption' name='consumption')
