add resignation status

--- a/views/parts/crmAddClient.pug
+++ b/views/parts/crmAddClient.pug
@@ -30,6 +30,7 @@ form(action="/panel/add-client/" method='POST' class='particular-client-new')
       label(for="status") Status
       select(class='particular-client-new__select-status' name='status')
         option(value="potencjalny") Potencjalny
+        option(value="rezygnacja") Rezygnacja
         option(value="aktualny") Aktualny
         option(value="kontakt") Kontakt
         option(value="no") NO
