--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -127,6 +127,7 @@ block content
            label(for="status") Status
            select(class='particular-client__select-status' name='status')
              option(value="potencjalny") Potencjalny
+             option(value="rezygnacja") Rezygnacja
              option(value="aktualny") Aktualny
              option(value="kontakt") Kontakt
              option(value="no") NO
