connect task with the client

--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -940,6 +940,12 @@
             &__open {
                 cursor: pointer;
             }
+
+            &__track-client {
+                align-self: center;
+                margin-right: 10px;
+                cursor: pointer;
+            }
         }
     }
 
