add client to mongo ok

--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -1249,6 +1249,16 @@
             background: red;
         }
     }
+
+    &__info {
+        display: none;
+        color: greenyellow;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 25px;
+    }
 }
 
 // koniec notatki
