--- a/views/parts/crmNotes.pug
+++ b/views/parts/crmNotes.pug
@@ -12,6 +12,7 @@
     button(class='note__button note__button--remove' type='button') Usuń
   .create-note   
     button(class='create-note__close' type='button') Zamknij
+    span(class='create-note__info')
     input(class='create-note__title' placeholder='Tytuł notatki')
     textarea(class='create-note__description' placeholder='Opis..')
     button(class='create-note__button note__button--create' type='button') Utwórz  
