edit note on front ok

--- a/views/parts/crmNotes.pug
+++ b/views/parts/crmNotes.pug
@@ -5,6 +5,7 @@
   .notes__container
   .note
     button(class='note__close' type='button') Zamknij
+    span(class='note__info')
     span(class='note__created') 09:34 04.06.2021
     input(class='note__title' value='Nazwa notatki') 
     textarea(class='note__description') Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptates harum inventore nobis nulla in ad sunt ducimus omnis dolores commodi itaque saepe velit nostrum, sapiente quibusdam earum laudantium corporis.
