--- a/views/parts/crmNotes.pug
+++ b/views/parts/crmNotes.pug
@@ -2,6 +2,7 @@
   button(class='notes__close' type='button') Zamknij
   button(class='notes__create-note' type='button') Dodaj notatkę
   h1(class='notes__title') Notatki na kliencie: 
+  span(class='notes__info') 
   .notes__container
   .note
     button(class='note__close' type='button') Zamknij
