--- a/views/parts/crmAddClient.pug
+++ b/views/parts/crmAddClient.pug
@@ -31,10 +31,12 @@ form(action="/panel/add-client/" method='POST' class='particular-client-new')
       select(class='particular-client-new__select-status' name='status')
         option(value="potencjalny") Potencjalny
         option(value="rezygnacja") Rezygnacja
+        option(value="błąd bazy") Błąd bazy
         option(value="aktualny") Aktualny
         option(value="kontakt") Kontakt
         option(value="no") NO
         option(value="spotkanie") Spotkanie
+        option(value="faktura") Faktura
         option(value="brak-danych") Brak danych
         option(value="inny") Inny
     .particular-client__line-contact
@@ -62,7 +64,8 @@ form(action="/panel/add-client/" method='POST' class='particular-client-new')
           option(value="brak-danych") Brak danych
           option(value="net") Internet   
           option(value="bazafirm") BazaFirm              
-          option(value="olx") Olx              
+          option(value="olx") Olx    
+          option(value="allegro") Allegro          
           option(value="gumtree") Gumtree              
           option(value="google") Google             
       .particular-client__div
