--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -24,7 +24,7 @@ block content
         option(value="nip") NIP
         option(value='name') Nazwa
         option(value='tel') Tel.
-      input.searchTerm(type='text' autocomplete="off" placeholder='Wybierz z lewej po czym szukasz, NIP?')
+      input.searchTerm(type='text' autocomplete="new-password" placeholder='Wybierz z lewej po czym szukasz, NIP?')
       button.searchButton(type='submit')
         i.fa.fa-search
      div(class="chat-container")
