--- a/public/stylesheets/modifiers/sass/_crm-panel.scss
+++ b/public/stylesheets/modifiers/sass/_crm-panel.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&display=swap');
 .energy-panel-wrapper {
     min-height: 100vh;
     width: 100vw;
@@ -482,6 +483,13 @@
     &__email {
         max-width: unset;
         width: 200px;
+    }
+
+    &__phone {
+        letter-spacing: 5px;
+        color: greenyellow;
+        font-family: 'Exo 2', sans-serif;
+        font-weight: bolder;
     }
 
     &__close {
