--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-   link(rel='stylesheet', href='/stylesheets/modifiers/css/crm.min.css')     
+   link(rel='stylesheet', href='/css/crm.min.css')     
    form(method='post')
      button(type='submit' class='logout-energy-btn') Wyloguj
    .energy-panel-wrapper
