--- a/views/crmPanel.pug
+++ b/views/crmPanel.pug
@@ -6,6 +6,7 @@ block content
      button(type='submit' class='logout-energy-btn') Wyloguj
    .energy-panel-wrapper
      include parts/chat
+     include parts/chatWindow
      h1(class="energy-panel-wrapper__title") energy2000 Panel
      h2(class='energy-panel-wrapper__subtitle') Zalogowano jako 
        span= fullName 
